up jdk version to 8